// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filtering URL params > should not be empty if active filters are present 1`] = `
{
  "configurable": "CONFIGURABLE",
  "type": "DIGITAL",
}
`;

exports[`Filtering URL params > should not be empty if active filters are present 2`] = `"configurable=CONFIGURABLE&type=DIGITAL"`;

exports[`Filtering URL params should not be empty if active filters are present 1`] = `
Object {
  "configurable": "CONFIGURABLE",
  "type": "DIGITAL",
}
`;

exports[`Filtering URL params should not be empty if active filters are present 2`] = `"configurable=CONFIGURABLE&type=DIGITAL"`;
